unpackaged/main/default/objects/Paraquat_Case__c/Paraquat_Case__c.object-meta.xml
<CustomObject>
    <description>Used as a defining object to store data from compaign efforts, such as questionaire specific data, tie to Case Type, and the such. This matches the previous built objects of Camp Lejeune and Talcum Powder</description>
    <label>Paraquat Case</label>
    <nameField>
        <displayFormat>PQ-{000000}</displayFormat>
        <label>Paraquat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paraquat Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>