unpackaged/main/default/objects/Paraquat_Case__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <description>Used to show the diagnosis of Paraquat use, this is filled out via questionnaire</description>
    <inlineHelpText>Paraquat use diagnosis, filled out via questionnaire</inlineHelpText>
    <label>Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Diagnosis</valueSetName>
    </valueSet>
</CustomField>