unpackaged/main/default/objects/Paraquat_Case__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Intake object that the case is attached to.</description>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Paraquat Cases</relationshipLabel>
    <relationshipName>Paraquat_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>