unpackaged/main/default/objects/Paraquat_Case__c/fields/Paraquat_Use__c.field-meta.xml
<CustomField>
    <fullName>Paraquat_Use__c</fullName>
    <description>This is to show Paraquat was used in what instances</description>
    <inlineHelpText>What instance was Paraquat used, where was the client exposed to it.</inlineHelpText>
    <label>Paraquat Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_of_Application</valueSetName>
    </valueSet>
</CustomField>