unpackaged/main/default/objects/Paraquat_Case__c/fields/Type_of_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Exposure__c</fullName>
    <description>Used to match the type of exposure to Paraquat they may have received.</description>
    <label>Type of Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Exposure</valueSetName>
    </valueSet>
</CustomField>